--- a/style.css
+++ b/style.css
@@ -61,16 +61,19 @@ a {
 }
 
 section {
-  height: 150vh;
+  height: 100vh;
   width: 100vw;
   position: sticky;
   display: flex;
   flex-direction: column;
   top: -1px;
 }
+section:first-child {
+  height: 150vh;
+}
 
 #page1 {
-  display: none;
+  /*display: none;*/
 
   background-image: url(bar-copy.png);
   background-size: contain;
@@ -190,9 +193,8 @@ section {
   display: grid;
   grid-template-columns: auto auto auto;
   color: white;
-
-  /*display: none;*/
 }
+
 .product .t-shirt {
   position: relative;
   height: 100vh;
@@ -237,7 +239,7 @@ section {
 .product .socks-jacket img, p {
   position: absolute;
 }
-.product .socks-jacket img:first-child {
+.product .socks-jacket img {
   width: 40%;
   top: 15%;
   left: -5%;
@@ -284,16 +286,19 @@ section {
 }
 
 .view-product {
-  height: 100vh;
-  width: 50vw;
+  width: 100vw;
+  display: flex;
+  
 }
 .view-product img {
-  width: 100%;
+  align-items: center;
+  width: 50vw;
+  align-self: flex-start;
 }
 .product-info {
-  height: 100vh;
   width: 50vw;
-  padding: 20% 0;
+  padding: 10% 0;
+  align-self: flex-start;
 }
 .product-info h2 {
   font-size: 3vw;
